fixed width changes on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 h2 {
   font-size: 45px;
   margin-bottom: 20px;
+  color:#0273a3;
  /* color:#fefefe;*/
 }
 span.title{
@@ -125,7 +126,13 @@ section {
 #challenges p.main{
  font-size:20px;
 }
-
+.route10km{
+/* background: url(../images/10kmroute.png) no-repeat left;*/
+}
+.routepicture-image{
+ max-width: 100%;
+ margin-bottom: 10px;
+}
 
 .heading {
   /*padding-bottom:90px;*/
@@ -164,7 +171,12 @@ section {
 .onCourseSupport{
  min-height:410px;
  border: 1px solid #028fcc;
+ width:33%;
+ margin-right:2px;
+ padding-right: 0px;
+ padding-left:0px;
 }
+
 
 
 /*************************
@@ -334,13 +346,13 @@ section {
 **************************/
 
 .service-icon {
-  border-radius: 4px;
+  /*border-radius: 4px;*/
   color: #fff;
   display: inline-block;
   font-size: 36px;
   height: 90px;
   line-height: 90px;
-  width: 90px;
+  width: 100%;
   -webkit-transition: background-color 0.2s ease;
   transition: background-color 0.2s ease;
 }
@@ -370,6 +382,10 @@ section {
 .service-info h3 {
   margin-top: 35px;
   font-size:2em;
+}
+.service-info{
+ padding-left:10px;
+ padding-right:10px;
 }
 
 /*************************
@@ -923,7 +939,8 @@ padding-left: 1px;
 }
 
 #contact-us {
-  background-image:url(../images/contact-bg.jpg);
+  /*background-image:url(../images/contact-bg.jpg);*/
+  background-color:#16233a;
   padding-bottom: 90px;
 }
 
